# CRA7_demo

./: README.md
client_pc/src/dvpg/: CMakeLists.txt  package.xml
dvpg/: CMakeLists.txt  README.md  package.xml  requirement.txt  setup.py
dvpg/config/: view_rosbot2_data.rviz  view_rosbotboth_data.rviz
dvpg/launch/: utmtransform.launch  view_rosbot1_data.launch  view_rosbotboth_data.launch
dvpg/params/: costmap_common_params.yaml
dvpg/params/husky/: costmap_common_params.yaml
dvpg/params/new/: costmap_common_params.yaml
dvpg/rviz/: lidar.rviz  localization.rviz  map.rviz
dvpg/scripts/: goal_listener.py  joy_launch_control.py  lidar_map.py  send_goal.py  utmgoal.py
dvpg/website/dvpg/: user_input.py
dvpg_setup/: DVPG_info.md  DVPG_setup.md  InfluxDBQuery.py  MQTTSubscriber.py
jackalpc/dvpg_jackal/: CMakeLists.txt  package.xml
jackalpc/dvpg_jackal/launch/: gps.launch  jackal.launch
new_configuration/dvpg/: view_map_creation.rviz
outdoor_waypoint_nav/scripts/: joy_launch_control.py
outdoor_waypoint_nav/src/: collect_gps_waypoints.cpp
outdoor_waypoint_nav/waypoint_files/: points_outdoor.txt
rosboard/: cert.pem  key.pem
rosboard/rosboard/: handlers.py  rosboard.py
serverpc/dvpg/: CMakeLists.txt  package.xml
serverpc/dvpg/config/: jackal.lua  jackalVLP16.lua  jackalVLP163D.lua
serverpc/dvpg/launch/: cartographer_2d.launch  cartographer_3d.launch  cartographer_demo.launch  test_2d.launch
serverpc/dvpg/urdf/: jackal.urdf
src_pc/teleop_twist_keyboard/: teleop_twist_keyboard.py
src_rosbot2/: README.md
src_turtlebot3/: readme.md
(+30 files in other folders)
