<?xml version="1.0"?>
<package format="2">
  <name>dvpg</name>
  <version>0.0.0</version>
  <description>The dvpg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mpsc@todo.todo">mpsc</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>jackal_navigation</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
